重构项目结构：将源码文件移至 src 文件夹，与配置文件分离

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "item-manager",
   "version": "1.0.0",
   "description": "条目分类管理器",
-  "main": "electron-main.js",
+  "main": "src/electron-main.js",
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
@@ -31,12 +31,9 @@
       "output": "dist"
     },
     "files": [
-      "index.html",
-      "main.js",
-      "style.css",
+      "src/**/*",
       "assets/**/*",
-      "electron-main.js",
-      "preload.js"
+      "icon.png"
     ],
     "win": {
       "target": "nsis",
