创建打包优化脚本：删除多余语言包、FFmpeg和Vulkan库，压缩包从206MB减少到90MB

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "build-win": "electron-builder --win && bash scripts/rename-windows-dist.sh",
+    "build-win": "electron-builder --win && bash scripts/rename-windows-dist.sh && bash scripts/optimize-windows-dist.sh",
     "build-mac": "electron-builder --mac",
     "build-linux": "electron-builder --linux",
     "test": "playwright test",
