添加 Windows 安装包构建脚本和文档：支持创建桌面快捷方式、开始菜单快捷方式、文件关联等功能

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@playwright/test": "^1.57.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.6.4",
-    "electron-reload": "^2.0.0-alpha.1"
+    "electron-reload": "^2.0.0-alpha.1",
+    "electron-winstaller": "^5.4.0"
   },
   "build": {
     "appId": "com.itemmanager.app",
