优化UI样式和修复Bug：统一条目框为白色背景，修复分类框条目计数不更新，优化Windows打包配置，更新开发文档

--- a/package.json
+++ b/package.json
@@ -53,13 +53,8 @@
       "main": "src/electron-main.js"
     },
     "win": {
+      "sign": null,
       "target": [
-        {
-          "target": "nsis",
-          "arch": [
-            "x64"
-          ]
-        },
         {
           "target": "zip",
           "arch": [
@@ -67,7 +62,6 @@
           ]
         }
       ],
-      "icon": "build/icon.ico",
       "artifactName": "${productName}-${version}-${arch}.${ext}",
       "requestedExecutionLevel": "asInvoker",
       "fileAssociations": [
