--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.6.4",
     "electron-reload": "^2.0.0-alpha.1",
-    "electron-winstaller": "^5.4.0"
+    "electron-winstaller": "^5.4.0",
+    "jsdom": "^27.4.0"
   },
   "build": {
     "appId": "com.itemmanager.app",
